--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,9 +11,9 @@
 # if you're sharing your code publicly.
 
 development:
-  admin_name: First User
-  admin_email: user@example.com
-  admin_password: changeme
+  admin_name: Site Admin
+  admin_email: site_admin@fake.com
+  admin_password: password
   email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
   email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
   domain_name: example.com
@@ -36,8 +36,8 @@ production:
   email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
   email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
   domain_name: <%= ENV["DOMAIN_NAME"] %>
-  mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %> 
-  mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %> 
-  stripe_api_key: <%= ENV["STRIPE_API_KEY"] %> 
-  stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %> 
+  mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
+  mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
+  stripe_api_key: <%= ENV["STRIPE_API_KEY"] %>
+  stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
