--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,24 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: wccm-default
   pool: 5
-  timeout: 5000
+  username:
+  password:
 
 development:
   <<: *default
-  database: db/wccm-development.sqlite3
+  database: wccm-development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/wccm-test.sqlite3
+  database: wccm-test
 
 production:
   <<: *default
-  database: db/wccm-mproduction.sqlite3
+  database: wccm-production
